<resources>
    <string name="app_name">Notenapp</string>
    <string name="noten">Noten</string>
    <string name="faecher">Fächer</string>
    <string name="lehrpersonen">Lehrpersonen</string>
    <string name="lehrperson_hinzufuegen">Lehrperson hinzufügen</string>
    <string name="lehpersonen_anzeigen">Lehpersonen anzeigen</string>
    <string name="exportieren">Exportieren</string>
    <string name="importieren">Importieren</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="fertig">Fertig</string>
    <string name="hinzufügen">Hinzufügen</string>
    <string name="loeschen">Löschen</string>
    <string name="bearbeiten">Bearbeiten</string>
    <string name="fach">Fach</string>
    <string name="lehrperson">Lehrperson</string>
    <string name="noten_hinzufuegen">Noten hinzufügen</string>
    <string name="noten_anzeigen">Noten anzeigen</string>
    <string name="note">Note</string>
    <string name="datumm">Datum</string>
    <string name="datum">Datum</string>
    <string name="email">Email</string>
</resources>