<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherOptionsActivity">

    <ImageButton
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:padding="3dp"
        android:src="@drawable/icon_add"
        android:onClick="buttonactionStartAddLehrperson"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/lehrperson_hinzufuegen" />

    <ImageButton
        android:id="@+id/button_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:padding="3dp"
        android:src="@drawable/icon_listview"
        android:onClick="buttonactionStartViewLehrperson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/lehpersonen_anzeigen" />

    <ImageButton
        android:id="@+id/button_export"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:padding="3dp"
        android:src="@drawable/icon_export"
        android:onClick="buttonactionStartExport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add"
        android:contentDescription="@string/exportieren" />
    <ImageButton
        android:id="@+id/button_import"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:padding="3dp"
        android:src="@drawable/icon_import"
        android:onClick="buttonactionStartImport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_list"
        android:contentDescription="@string/importieren" />



</androidx.constraintlayout.widget.ConstraintLayout>